Archive2/f4/9fe209d6e40dc5/output
+ g++ -std=c++1y -O3 -Wall -Wextra -pedantic -Werror -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:7:11: error: call of overloaded 'f()' is ambiguous
     A{}.f();
           ^
main.cpp:7:11: note: candidates are:
main.cpp:2:10: note: void A::f()
     auto f() & {}
          ^
main.cpp:3:10: note: void A::f()
     auto f() && {}
          ^
main.cpp:9:9: error: call of overloaded 'f()' is ambiguous
     a.f();
         ^
main.cpp:9:9: note: candidates are:
main.cpp:2:10: note: void A::f()
     auto f() & {}
          ^
main.cpp:3:10: note: void A::f()
     auto f() && {}
          ^
